# OKVIS2-X

./: CMakeLists.txt  DBOW3_IMPLEMENTATION_PLAN.md  DBOW3_REFACTORING_ANALYSIS.md  DBOW3_REFACTORING_EXECUTIVE_SUMMARY.md  DBOW3_REFACTORING_INDEX.md  FEATURE_ANALYSIS.md  FEATURE_CODE_FLOW.md  FEATURE_IMPLEMENTATION_GUIDE.md  OKVIS2X_DETAILED_CODEBASE_ANALYSIS.md  OKVIS2X_PROJECT_ANALYSIS.md  OKVIS2_CIRCULAR_FISHEYE_ANALYSIS.md  PHASE_1_STARTER_CODE.md  QUICK_REFERENCE.md  README.md  README_DBOW3_REFACTORING.md  REFACTORING_DECISION_MATRIX.md  REFACTORING_IMPLEMENTATION_CHECKLIST.md  REFACTORING_QUICKSTART.txt  SuperVINS_Analysis.md  SuperVINS_CODE_EXAMPLES.md  SuperVINS_QUICK_REFERENCE.md  run.txt
DBow3_dpl-main/: CMakeLists.txt  README.md  imagesProcess.py
DBow3_dpl-main/utils/: CMakeCache.txt  CMakeLists.txt  FindDBoW3.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  demo_general.cpp
DBow3_dpl-main/utils/src/: Makefile  cmake_install.cmake  libDBoW3.so.0.0.1
DBow3_dpl-main/utils/superpoint/include/: extractor_matcher_dpl.cpp  extractor_matcher_dpl.h  parameters.cpp  parameters.h  superpoint.cpp  superpoint.h
DBow3_dpl-main/utils/utils/: Makefile  cmake_install.cmake  create_voc_step0  create_voc_step1  demo_general
DBow3_dpl-main/utils/xfeat/include/: Config.h  XFeat.cpp  XFeat.h
DBow3_dpl-main/utils/xfeat/model/: xfeat.onnx
config/euroc/: okvis2.yaml
config/fisheye4/: okvis2.yaml
okvis_common/src/: ViParametersReader.cpp
okvis_deep_learning/src/: DepthFusionProcessor.cpp
okvis_frontend/: CMakeLists.txt
(+14 files in other folders)
